src/test/deca/context/invalid/homemade/tests/test329_condition/test329_condition2.deca
// test invalide de la règle 3.29


{
    if (9 % 3) {
        ;
    }
}
